--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=MTG
 APP_ENV=local
 APP_KEY=base64:QpShqQ86zWTxBJlYJQ8LAujfaLnCKIkQo8z/5WoTSFU=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost/mtg
 
 LOG_CHANNEL=stack
 
@@ -24,11 +24,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.gmail.com    
+MAIL_PORT=465    
+MAIL_USERNAME=ahmed.shy31@gmail.com    
+MAIL_PASSWORD=01231091993    
+MAIL_ENCRYPTION=ssl
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
